<resources>

    <!--STRINGS TELA SPLASH!-->
    <string name="app_name">UNESC</string>
    <string name="tvVersao">Versão 1.0</string>

    <!--STRINGS TELA HOME!-->
    <string name="hintUSUARIO">Usuário</string>
    <string name="hintSENHA">Senha</string>
    <string name="btnENTRAR">ENTRAR</string>

    <!-- STRINGS TELA SUCESSO!-->
    <string name="tvCurso">Curso</string>
    <string name="tvFase">Fase</string>
    <string name="tvPeriodo">Periodo</string>
    <string name="tvMatricula">Matricula</string>
    <string name="btnAvancar">AVANÇAR</string>

</resources>