<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/logopreta"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"/>

    <EditText
        android:id="@+id/edtUSER"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/hintUSUARIO"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>

    <EditText
        android:id="@+id/edtSENHA"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/custom_input"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="40dp"
        android:hint="@string/hintSENHA"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>

    <Button
        android:id="@+id/btnENTRAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/btnENTRAR"
        android:textColor="@color/white"/>

</LinearLayout>